2008-??-??  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>\
	
	* using CDI library version 1.2.2
	* import_cmsaf: add support for monthly mean diurnal variation
	* remapcon: add support for second order remapping (use env REMAP_ORDER=2)
	* Arith: add filltype FILL_RECTS [request: Wolfgang Mueller]
	* gridverify: replaced [Cedrick Ansorge]
	* intlevel: bug fix for datasets with missing values
	* yseasstd,yseasvar: wrong array index (bug fix) [report: Robert Nicholas]
	* Version 1.2.2 released

2008-11-13  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
	
	* using CDI library version 1.2.1
	* New operator: import_cmsaf - import CM-SAF files
	* New operator: gengrid - generate grid [request: Michael Boettinger]
	* New operator: pow - Power [request: Gil Lizcano]
	* New operator: tpnhalo (testversion)
	* Module Timstat: use taxis with bounds from input [request: Beate Geyer]
	* sellonlatbox: add support for grid units 'radians' [request: Jeff Daily]
	* sellonlatbox: add support for GRID_CELL [request: Jeff Daily]
	* Add option '-u' to determinate whether to overwrite existing files [request: David Wang]
        * copy, cat: concatenate time constant fields
	* copy, cat: compare input files
	* zonvar: activation missing (bug fix) [report: Irene Fischer-Bruns]
	* detrend: change taxisCreate to taxisDuplicate [report: Ute Merkel]
	* remapdis: add support for GRID_CELL without bounds (full grid search)
	* remapbil: bug fix for cross_product eq zero
	* sethalo: bug fix for x/y bounds [report: Helmut Haak]
	* ifthen:  bug fix for datasets with different missing values [report: Beate Geyer]
	* runmean: bug fix for datasets with missing values [report: Carmen Ulmen]
	* namelist: bug fix for wrong input
	* Version 1.2.1 released

2008-08-13  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.2.0
	* add support for netCDF4 classic with deflate option (option -z zip)
	* Arith: add filltype FILL_FILE [request: Rita Seiffert]